--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -2,11 +2,16 @@
   display: grid;
   grid-template-columns: 65% 35%;
   padding-left: 20rem;
-  padding-right: 15rem;
+  padding-right: 20rem;
   /* background-color: var(--hover-btn-color); */
 }
 .column {
   padding: 2rem;
+  height: 50rem;
+  background-color: var(--hover-btn-color);
+}
+
+.empty {
   height: 50rem;
   background-color: var(--hover-btn-color);
 }
