single product page completed

--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -192,6 +192,20 @@ main .card-tag {
   align-items: center;
 }
 
+/* main .card-badge img:first-child {
+  width: 25rem;
+  height: 30rem;
+  margin: 2rem 2rem 0rem 2rem;
+  border-radius: 0.5rem;
+} */
+
+.img-style {
+  width: 25rem;
+  height: 30rem;
+  margin: 2rem 2rem 0rem 2rem;
+  border-radius: 0.5rem;
+}
+
 main .prod-headline {
   color: red;
   margin: 1rem 2rem;
