added button onclick text change functionality for home and product desc pages

--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -230,7 +230,8 @@ main .prod-headline {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
